@@ -1,11 +1,15 @@
 neutron (2:8.0.1~dev377-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Corey Bryant ]
   * New upstream version.
   * d/control: Align (build-)depends with upstream.
   * d/p/skip-ryu-tests.patch: Dropped since BDs no longer have to be in main.
   * d/p/drop-ryu-dep.patch: Rebased.
   * d/control, d/neutron-bgp-dragent.*: Remove BGP support, aligning with
     upstream removal.
+
+  [ James Page ]
+  * d/rules: Switch to using ostestr for unit test execution to avoid races.
 
  -- Corey Bryant <corey.bryant@canonical.com>  Thu, 12 May 2016 15:51:59 -0400
 
